--- a/src/WPFMVVMFileOpen/WPFMVVMFileOpen.csproj
+++ b/src/WPFMVVMFileOpen/WPFMVVMFileOpen.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FocusOnEditorCommand.cs" />
     <Compile Include="OpenFileCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WPFMVVMFileOpenPackage.cs" />
@@ -73,6 +74,7 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\FocusOnEditorCommand.png" />
     <Content Include="Resources\OpenFileCommand.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
